<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="@string/edt_starting_address"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edt_starting_address"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="@string/edt_destination_address"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edt_destination_address"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/navigation_button"
            android:text="@string/navigation_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <Button
            android:id="@+id/clear_addresses_button"
            android:text="@string/clear_addresses_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
    </LinearLayout>
</LinearLayout>