<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/navigation_layout_background_color"
    android:id="@+id/steps_list_item">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/current_step_title"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/current_step_title"
            android:textColor="@color/steps_item_value_color"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/current_step_distance_text"
            android:textColor="@color/steps_item_title_color"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/current_step_distance_text"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/current_step_distance_text"
            android:textColor="@color/steps_item_value_color"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/current_step_duration_text"
            android:textColor="@color/steps_item_title_color"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/current_step_duration_text"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/current_step_duration_text"
            android:textColor="@color/steps_item_value_color"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/current_step_starting_text"
            android:textColor="@color/steps_item_title_color"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/current_step_starting_text"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/current_step_starting_text"
            android:textColor="@color/steps_item_value_color"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/current_step_destination_text"
            android:textColor="@color/steps_item_title_color"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/current_step_destination_text"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/current_step_destination_text"
            android:textColor="@color/steps_item_value_color"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/current_step_maneuver_text"
            android:textColor="@color/steps_item_title_color"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/current_step_maneuver_text"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/current_step_maneuver_text"
            android:textColor="@color/steps_item_value_color"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:layout_marginTop="5dp"
        android:background="@color/white" />
</LinearLayout>